src/objects/OEM_Product_Generation__mdt.object
<CustomObject>
    <description>This metadata contains what products to be generated for each OEM DSI creation on the products download site.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>SFDC account id for the OEM user</description>
        <label>Account Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Product Id to be slotted into the Subscription</description>
        <inlineHelpText>Should be of type term</inlineHelpText>
        <label>Product Id</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is it active?</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>OEM Product Generation</label>
    <pluralLabel>OEM Product Generation</pluralLabel>
</CustomObject>